Retrive a random single node from validate network map
Signed-off-by: Nana-EC <nana.essilfie-conduah@hedera.com>